# Smart-home-energy-manager

./: Dockerfile  README.md  docker-compose.yml  inference.py  main.py  mvp.md  openenv.yaml  prevalidate.py  prevalidate_output.txt  pyproject.toml  requirements.txt
env/: __init__.py  environment.py  grader.py  models.py  reward.py  tasks.py
server/: app.py
