[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "smart-home-energy-manager"
version = "1.0.0"
description = "Smart Home Energy Management RL environment"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "openai",
    "httpx",
    "pyyaml",
    "starlette",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "main:start_server"
